--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.0.0",
     "vue-responsive-video-background-player": "^2.2.0",
     "vue-router": "^4.0.0-0",
+    "vue-videobg": "^2.0.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
